# CudaSiftAPI

./: CMakeLists.txt  Dockerfile  RAII_Gaurds.hpp  cudaImage.cu  cudaImage.h  cudaSift.h  cudaSiftD.cu  cudaSiftD.h  cudaSiftH.cu  cudaSiftH.h  cusfit.cu  cusift.cu  cusift.h  geomFuncs.c  geomFuncs.h  matching.cu
cusift_py/: create_ground_truth.py  cuda_coreg.py  cuda_optimize.py  cuda_optimize_params.json  cuda_sift_vis.py  main.py  optimize_extraction.py  requirements.txt  run_cuda_optimize.sh  test.py
cusift_py/cusift/: __init__.py  _bindings.py  cusift.py  py_sift_cv2.py
test/: main.cpp  speed.cpp  stb_image_write.h
